--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
     "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
     "react/jsx-no-constructed-context-values": "off",
+    "react/jsx-props-no-spreading": "off",
     "@typescript-eslint/explicit-function-return-type": [
       "error",
       {
