--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-tooltip": "^0.1.7",
     "@types/styled-components": "^5.1.25",
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
