--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.4",
     "styled-components": "^5.3.5"
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-lottie": "^1.2.6",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "@vitejs/plugin-react": "^1.3.0",
