--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,8 @@
     "react/jsx-props-no-spreading": "off",
     "react/require-default-props": "off",
     "react/prop-types": "off",
+    "react/jsx-no-bind": "off",
+    "no-param-reassign": "off",
     "@typescript-eslint/explicit-function-return-type": [
       "error",
       {
