--- a/package.json
+++ b/package.json
@@ -12,24 +12,29 @@
     "@radix-ui/react-dialog": "^0.1.7",
     "@radix-ui/react-dropdown-menu": "^0.1.6",
     "@radix-ui/react-hover-card": "^0.1.5",
+    "@radix-ui/react-popover": "^0.1.6",
     "@radix-ui/react-tabs": "^0.1.5",
     "@radix-ui/react-tooltip": "^0.1.7",
     "@types/styled-components": "^5.1.25",
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
+    "date-fns": "^2.28.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
+    "react-day-picker": "^8.0.6",
     "react-dom": "^18.0.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.4",
     "styled-components": "^5.3.5",
+    "vanilla-masker": "^1.2.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-lottie": "^1.2.6",
+    "@types/vanilla-masker": "^1.2.1",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "@vitejs/plugin-react": "^1.3.0",
