--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dropdown-menu": "^0.1.6",
     "@radix-ui/react-hover-card": "^0.1.5",
     "@radix-ui/react-popover": "^0.1.6",
+    "@radix-ui/react-slider": "^0.1.4",
     "@radix-ui/react-tabs": "^0.1.5",
     "@radix-ui/react-tooltip": "^0.1.7",
     "@types/styled-components": "^5.1.25",
