--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.0.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.3.0",
+    "react-select": "^5.3.2",
     "react-toastify": "^9.0.4",
     "styled-components": "^5.3.5",
     "vanilla-masker": "^1.2.0",
