--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.0.0",
     "react-day-picker": "^8.0.6",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.4.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.3.2",
