--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@unform/web": "^2.1.6",
     "date-fns": "^2.28.0",
     "phosphor-react": "^1.4.1",
+    "polished": "^4.2.2",
     "react": "^18.0.0",
     "react-day-picker": "^8.0.6",
     "react-dom": "^18.0.0",
