--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^2.28.0",
     "phosphor-react": "^1.4.1",
     "polished": "^4.2.2",
+    "prism-react-renderer": "^1.3.3",
     "react": "^18.0.0",
     "react-day-picker": "^8.0.6",
     "react-dom": "^18.0.0",
