--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^0.1.6",
     "@radix-ui/react-aspect-ratio": "^0.1.4",
+    "@radix-ui/react-checkbox": "^0.1.5",
     "@radix-ui/react-dialog": "^0.1.7",
     "@radix-ui/react-dropdown-menu": "^0.1.6",
     "@radix-ui/react-hover-card": "^0.1.5",
     "@radix-ui/react-popover": "^0.1.6",
+    "@radix-ui/react-radio-group": "^0.1.5",
     "@radix-ui/react-slider": "^0.1.4",
+    "@radix-ui/react-switch": "^0.1.5",
     "@radix-ui/react-tabs": "^0.1.5",
     "@radix-ui/react-tooltip": "^0.1.7",
     "@types/styled-components": "^5.1.25",
