--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
   ],
   "rules": {
     "prettier/prettier": "error",
+    "react-hooks/exhaustive-deps": "warn",
     "import/prefer-default-export": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
     "react/jsx-no-constructed-context-values": "off",
