--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "react": "^18.0.0",
     "react-day-picker": "^8.0.6",
     "react-dom": "^18.0.0",
+    "react-dropzone": "^14.2.2",
     "react-icons": "^4.4.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.3.2",
     "react-toastify": "^9.0.4",
     "styled-components": "^5.3.5",
+    "uuid": "^8.3.2",
     "vanilla-masker": "^1.2.0",
     "yup": "^0.32.11",
     "zustand": "^4.0.0"
@@ -54,6 +56,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-lottie": "^1.2.6",
+    "@types/uuid": "^8.3.4",
     "@types/vanilla-masker": "^1.2.1",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
